[package]
name = "ronflex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.4"
colored = "2.0.0"
rust_syscalls = {git = "https://github.com/Nariod/rust_syscalls", features = ["_INDIRECT_"]}

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
]
