[package]
name = "ronflex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.28.4"
colored = "2.0.0"
winapi = "0.3.9"
ntapi = "0.4.0"
winreg = "0.50.0"
rust_syscalls = {git = "https://github.com/Nariod/rust_syscalls", features = ["_INDIRECT_"]}