[package]
name = "ronflex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.29"
colored = "2.0.0"
winapi = "0.3.9"
ntapi = "0.4.0"
winreg = "0.50.0"
obfstr = "0.4.3"
rust_syscalls = {git = "https://github.com/Nariod/rust_syscalls", features = ["_INDIRECT_"]}


[dependencies.windows]
version = "0"
features = [
    "Win32_Security",
]